--- a/composer.json
+++ b/composer.json
@@ -11,18 +11,18 @@
     "homepage": "http://github.com/ADmad/cakephp-jwt-auth",
     "authors": [
         {
-            "name":"ADmad",
-            "role":"Author",
-            "homepage":"https://github.com/ADmad"
+            "name": "ADmad",
+            "role": "Author",
+            "homepage": "https://github.com/ADmad"
         }
     ],
     "license": "MIT",
     "support": {
-        "source":"https://github.com/ADmad/cakephp-jwt-auth",
-        "issues":"https://github.com/ADmad/cakephp-jwt-auth/issues"
+        "source": "https://github.com/ADmad/cakephp-jwt-auth",
+        "issues": "https://github.com/ADmad/cakephp-jwt-auth/issues"
     },
     "require": {
-        "cakephp/cakephp": "^4.0",
+        "cakephp/cakephp": "~4.5",
         "firebase/php-jwt": "^5.0"
     },
     "require-dev": {
