--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "require": {
         "cakephp/cakephp": "~4.5",
-        "firebase/php-jwt": "^5.0"
+        "firebase/php-jwt": "~5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~8.5.0"
